--- a/pibic_acm.ipynb
+++ b/pibic_acm.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNm2kJIAyLW5B9siZe2c+2e",
+      "authorship_tag": "ABX9TyOHcBR5oPJpGi3R+//EVRjA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "YkGauHOdfpDy"
       },
@@ -54,91 +54,91 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4U9CSbO1vTJd",
-        "outputId": "be004c0f-1fe3-4895-e504-fbbb6c31135e"
+        "outputId": "26b077e5-1c12-44c1-a1ab-748133a00bd1"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "            Item type                                         Authors  \\\n",
-            "0    Conference Paper  Lobato FM,Tadaiesky VW,Araújo IM,de Santana ÁL   \n",
-            "1    Conference Paper      Kuppannagari SR,Fu Y,Chueng CM,Prasanna VK   \n",
-            "2    Conference Paper                        Wang Q,Ren S,Xia Y,Cao L   \n",
-            "3    Conference Paper               Shen M,Zhang H,Cao Y,Yang F,Wen Y   \n",
-            "4    Conference Paper                                Yang L,Chiang JA   \n",
-            "..                ...                                             ...   \n",
-            "446              Book                                             NaN   \n",
-            "447              Book                                             NaN   \n",
-            "448              Book                                             NaN   \n",
-            "449              Book                                             NaN   \n",
-            "450              Book                                             NaN   \n",
+            "            Item type                                            Authors  \\\n",
+            "0    Conference Paper     Lobato FM,Tadaiesky VW,Araújo IM,de Santana ÁL   \n",
+            "1    Conference Paper         Kuppannagari SR,Fu Y,Chueng CM,Prasanna VK   \n",
+            "2    Conference Paper                           Wang Q,Ren S,Xia Y,Cao L   \n",
+            "3    Conference Paper                  Shen M,Zhang H,Cao Y,Yang F,Wen Y   \n",
+            "4    Conference Paper                                   Yang L,Chiang JA   \n",
+            "..                ...                                                ...   \n",
+            "446  Conference Paper  Kirchhof JC,Kusmenko E,Ritz J,Rumpe B,Moin A,B...   \n",
+            "447              Book                                                NaN   \n",
+            "448   Journal Article                   Li J,Deng L,Gong Y,Haeb-Umbach R   \n",
+            "449  Conference Paper              Ma F,Gao J,Suo Q,You Q,Zhou J,Zhang A   \n",
+            "450  Conference Paper                                Xiu Z,Tao C,Henao R   \n",
             "\n",
-            "                                                 Title Journal  \\\n",
-            "0    An Evolutionary Missing Data Imputation Method...     NaN   \n",
-            "1    Spatio-Temporal Missing Data Imputation for Sm...     NaN   \n",
-            "2    BiCMTS: Bidirectional Coupled Multivariate Lea...     NaN   \n",
-            "3    Missing Data Imputation for Solar Yield Predic...     NaN   \n",
-            "4    Use Case and Performance Analyses for Missing ...     NaN   \n",
-            "..                                                 ...     ...   \n",
-            "446  CSCW '17: Proceedings of the 2017 ACM Conferen...     NaN   \n",
-            "447  WebMedia '22: Proceedings of the Brazilian Sym...     NaN   \n",
-            "448  ASE '16: Proceedings of the 31st IEEE/ACM Inte...     NaN   \n",
-            "449  CHI EA '21: Extended Abstracts of the 2021 CHI...     NaN   \n",
-            "450  SBES '22: Proceedings of the XXXVI Brazilian S...     NaN   \n",
-            "\n",
-            "     Publication year  Volume Issue      Pages  \\\n",
-            "0                2015     NaN   NaN  1013–1019   \n",
-            "1                2021     NaN   NaN    458–465   \n",
-            "2                2021     NaN   NaN  3493–3497   \n",
-            "3                2021     NaN   NaN  2558–2566   \n",
-            "4                2020     NaN   NaN    107–111   \n",
-            "..                ...     ...   ...        ...   \n",
-            "446              2017     NaN   NaN        NaN   \n",
-            "447              2022     NaN   NaN        NaN   \n",
-            "448              2016     NaN   NaN        NaN   \n",
-            "449              2021     NaN   NaN        NaN   \n",
-            "450              2022     NaN   NaN        NaN   \n",
-            "\n",
-            "                               Publisher            Address  ...  \\\n",
-            "0    Association for Computing Machinery  New York, NY, USA  ...   \n",
-            "1    Association for Computing Machinery  New York, NY, USA  ...   \n",
-            "2    Association for Computing Machinery  New York, NY, USA  ...   \n",
-            "3    Association for Computing Machinery  New York, NY, USA  ...   \n",
-            "4    Association for Computing Machinery  New York, NY, USA  ...   \n",
-            "..                                   ...                ...  ...   \n",
-            "446  Association for Computing Machinery  New York, NY, USA  ...   \n",
-            "447  Association for Computing Machinery  New York, NY, USA  ...   \n",
-            "448  Association for Computing Machinery  New York, NY, USA  ...   \n",
-            "449  Association for Computing Machinery  New York, NY, USA  ...   \n",
-            "450  Association for Computing Machinery  New York, NY, USA  ...   \n",
-            "\n",
-            "                                                  URLs  \\\n",
-            "0    https://doi.org/10.1145/2739482.2768451;http:/...   \n",
-            "1    https://doi.org/10.1145/3447555.3466586;http:/...   \n",
-            "2    https://doi.org/10.1145/3459637.3482064;http:/...   \n",
-            "3    https://doi.org/10.1145/3474085.3475430;http:/...   \n",
-            "4    https://doi.org/10.1145/3379247.3379270;http:/...   \n",
+            "                                                 Title  \\\n",
+            "0    An Evolutionary Missing Data Imputation Method...   \n",
+            "1    Spatio-Temporal Missing Data Imputation for Sm...   \n",
+            "2    BiCMTS: Bidirectional Coupled Multivariate Lea...   \n",
+            "3    Missing Data Imputation for Solar Yield Predic...   \n",
+            "4    Use Case and Performance Analyses for Missing ...   \n",
             "..                                                 ...   \n",
-            "446                                                NaN   \n",
-            "447                                                NaN   \n",
-            "448                                                NaN   \n",
-            "449                                                NaN   \n",
-            "450                                                NaN   \n",
+            "446  MDE for Machine Learning-Enabled Software Syst...   \n",
+            "447  Probabilistic and Causal Inference: The Works ...   \n",
+            "448  An Overview of Noise-Robust Automatic Speech R...   \n",
+            "449  Risk Prediction on Electronic Health Records w...   \n",
+            "450  Variational Learning of Individual Survival Di...   \n",
             "\n",
-            "                         DOI  \\\n",
-            "0    10.1145/2739482.2768451   \n",
-            "1    10.1145/3447555.3466586   \n",
-            "2    10.1145/3459637.3482064   \n",
-            "3    10.1145/3474085.3475430   \n",
-            "4    10.1145/3379247.3379270   \n",
-            "..                       ...   \n",
-            "446                      NaN   \n",
-            "447                      NaN   \n",
-            "448                      NaN   \n",
-            "449                      NaN   \n",
-            "450                      NaN   \n",
+            "                                           Journal  Publication year  Volume  \\\n",
+            "0                                              NaN              2015     NaN   \n",
+            "1                                              NaN              2021     NaN   \n",
+            "2                                              NaN              2021     NaN   \n",
+            "3                                              NaN              2021     NaN   \n",
+            "4                                              NaN              2020     NaN   \n",
+            "..                                             ...               ...     ...   \n",
+            "446                                            NaN              2022     NaN   \n",
+            "447                                            NaN              2022    36.0   \n",
+            "448  IEEE/ACM Trans. Audio, Speech and Lang. Proc.              2014    22.0   \n",
+            "449                                            NaN              2018     NaN   \n",
+            "450                                            NaN              2020     NaN   \n",
+            "\n",
+            "    Issue      Pages                            Publisher            Address  \\\n",
+            "0     NaN  1013–1019  Association for Computing Machinery  New York, NY, USA   \n",
+            "1     NaN    458–465  Association for Computing Machinery  New York, NY, USA   \n",
+            "2     NaN  3493–3497  Association for Computing Machinery  New York, NY, USA   \n",
+            "3     NaN  2558–2566  Association for Computing Machinery  New York, NY, USA   \n",
+            "4     NaN    107–111  Association for Computing Machinery  New York, NY, USA   \n",
+            "..    ...        ...                                  ...                ...   \n",
+            "446   NaN    380–387  Association for Computing Machinery  New York, NY, USA   \n",
+            "447   NaN        NaN  Association for Computing Machinery  New York, NY, USA   \n",
+            "448     4    745–777                           IEEE Press                NaN   \n",
+            "449   NaN  1910–1919  Association for Computing Machinery  New York, NY, USA   \n",
+            "450   NaN      10–18  Association for Computing Machinery  New York, NY, USA   \n",
+            "\n",
+            "     ...                                               URLs  \\\n",
+            "0    ...  https://doi.org/10.1145/2739482.2768451;http:/...   \n",
+            "1    ...  https://doi.org/10.1145/3447555.3466586;http:/...   \n",
+            "2    ...  https://doi.org/10.1145/3459637.3482064;http:/...   \n",
+            "3    ...  https://doi.org/10.1145/3474085.3475430;http:/...   \n",
+            "4    ...  https://doi.org/10.1145/3379247.3379270;http:/...   \n",
+            "..   ...                                                ...   \n",
+            "446  ...  https://doi.org/10.1145/3550356.3561576;http:/...   \n",
+            "447  ...                                                NaN   \n",
+            "448  ...  https://doi.org/10.1109/TASLP.2014.2304637;htt...   \n",
+            "449  ...  https://doi.org/10.1145/3219819.3220020;http:/...   \n",
+            "450  ...  https://doi.org/10.1145/3368555.3384454;http:/...   \n",
+            "\n",
+            "                            DOI  \\\n",
+            "0       10.1145/2739482.2768451   \n",
+            "1       10.1145/3447555.3466586   \n",
+            "2       10.1145/3459637.3482064   \n",
+            "3       10.1145/3474085.3475430   \n",
+            "4       10.1145/3379247.3379270   \n",
+            "..                          ...   \n",
+            "446     10.1145/3550356.3561576   \n",
+            "447                         NaN   \n",
+            "448  10.1109/TASLP.2014.2304637   \n",
+            "449     10.1145/3219819.3220020   \n",
+            "450     10.1145/3368555.3384454   \n",
             "\n",
             "                                              Abstract  \\\n",
             "0    Data analysis plays an important role in our I...   \n",
@@ -147,11 +147,11 @@
             "3    The accurate and robust prediction of short-te...   \n",
             "4    In big data analytics the phenomenon of missin...   \n",
             "..                                                 ...   \n",
-            "446  Welcome to CSCW 2017, the ACM 2017 Conference ...   \n",
-            "447                                                NaN   \n",
-            "448                                                NaN   \n",
-            "449                                                NaN   \n",
-            "450                                                NaN   \n",
+            "446  In this paper, we propose to adopt the MDE par...   \n",
+            "447  Professor Judea Pearl won the 2011 Turing Awar...   \n",
+            "448  New waves of consumer-centric applications, su...   \n",
+            "449  Predicting the risk of potential diseases from...   \n",
+            "450  The abundance of modern health data provides m...   \n",
             "\n",
             "                                              Keywords Notes  \\\n",
             "0    evolutionary computing, data imputation, genet...   NaN   \n",
@@ -160,24 +160,37 @@
             "3    multimodal learning, data imputation, solar fo...   NaN   \n",
             "4    Big data analytics, missing data, error estima...   NaN   \n",
             "..                                                 ...   ...   \n",
-            "446                                                NaN   NaN   \n",
+            "446  tools, domain specific modeling, model-driven ...   NaN   \n",
             "447                                                NaN   NaN   \n",
-            "448                                                NaN   NaN   \n",
-            "449                                                NaN   NaN   \n",
-            "450                                                NaN   NaN   \n",
+            "448  speech recognition, robustness, uncertainty pr...   NaN   \n",
+            "449  healthcare informatics, prior medical knowledg...   NaN   \n",
+            "450  neural networks, individual personal distribut...   NaN   \n",
             "\n",
-            "                  Series Book title     Sub-type Editors Edition  \n",
-            "0    GECCO Companion '15        NaN          NaN     NaN     NaN  \n",
-            "1           e-Energy '21        NaN          NaN     NaN     NaN  \n",
-            "2               CIKM '21        NaN          NaN     NaN     NaN  \n",
-            "3                 MM '21        NaN          NaN     NaN     NaN  \n",
-            "4             ICCDE 2020        NaN          NaN     NaN     NaN  \n",
-            "..                   ...        ...          ...     ...     ...  \n",
-            "446                  NaN        NaN  Proceedings     NaN     NaN  \n",
-            "447                  NaN        NaN  Proceedings     NaN     NaN  \n",
-            "448                  NaN        NaN  Proceedings     NaN     NaN  \n",
-            "449                  NaN        NaN  Proceedings     NaN     NaN  \n",
-            "450                  NaN        NaN  Proceedings     NaN     NaN  \n",
+            "                  Series Edition Sub-type Book title  \\\n",
+            "0    GECCO Companion '15     NaN      NaN        NaN   \n",
+            "1           e-Energy '21     NaN      NaN        NaN   \n",
+            "2               CIKM '21     NaN      NaN        NaN   \n",
+            "3                 MM '21     NaN      NaN        NaN   \n",
+            "4             ICCDE 2020     NaN      NaN        NaN   \n",
+            "..                   ...     ...      ...        ...   \n",
+            "446           MODELS '22     NaN      NaN        NaN   \n",
+            "447                  NaN     1.0      NaN        NaN   \n",
+            "448                  NaN     NaN      NaN        NaN   \n",
+            "449              KDD '18     NaN      NaN        NaN   \n",
+            "450             CHIL '20     NaN      NaN        NaN   \n",
+            "\n",
+            "                            Editors  \n",
+            "0                               NaN  \n",
+            "1                               NaN  \n",
+            "2                               NaN  \n",
+            "3                               NaN  \n",
+            "4                               NaN  \n",
+            "..                              ...  \n",
+            "446                             NaN  \n",
+            "447  Geffner H,Dechter R,Halpern JY  \n",
+            "448                             NaN  \n",
+            "449                             NaN  \n",
+            "450                             NaN  \n",
             "\n",
             "[451 rows x 25 columns]\n"
           ]
@@ -194,9 +207,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p3GoWfZ0v6WW",
-        "outputId": "6f5bf3d4-423b-4a22-d146-f73963d6ff58"
+        "outputId": "b124c067-069b-4900-e7e8-628790200f7a"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,10 +241,10 @@
             " 18  Keywords             360 non-null    object \n",
             " 19  Notes                5 non-null      object \n",
             " 20  Series               270 non-null    object \n",
-            " 21  Book title           2 non-null      object \n",
+            " 21  Edition              3 non-null      float64\n",
             " 22  Sub-type             27 non-null     object \n",
-            " 23  Editors              1 non-null      object \n",
-            " 24  Edition              3 non-null      float64\n",
+            " 23  Book title           2 non-null      object \n",
+            " 24  Editors              1 non-null      object \n",
             "dtypes: float64(3), int64(1), object(21)\n",
             "memory usage: 88.2+ KB\n"
           ]
@@ -247,16 +260,17 @@
       "metadata": {
         "id": "g-A02kMJwt0n"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df_final=df_clone[['Title','Authors','Publication year','Abstract','URLs','Item type']]\n",
-        "df_final.rename(columns={'Title': 'TITLE','Authors':'AUTHORS','Publication year':'PUBLICATION_YEAR','Abstract':'ABSTRACT','URLs':'LINKS',  })\n",
-        "new_df = df_final.assign(SEARCH_ENGINE='ACM')\n",
-        "new_df"
+        "#escolher as colunas que vao ser passadas para do df final e depois adicionar uma nova coluna com o engenho de busca\n",
+        "df_desejado=df_clone[['Title','Authors','Publication year','Abstract','URLs','Item type']]\n",
+        "df_desejado.rename(columns={'Title': 'TITLE','Authors':'AUTHORS','Publication year':'PUBLICATION_YEAR','Abstract':'ABSTRACT','URLs':'LINKS',  })\n",
+        "df_final = df_desejado.assign(SEARCH_ENGINE='ACM')\n",
+        "df_final"
       ],
       "metadata": {
         "colab": {
