--- a/pibic_acm.ipynb
+++ b/pibic_acm.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHcBR5oPJpGi3R+//EVRjA",
+      "authorship_tag": "ABX9TyNZ8yGt3yycwcV0aMI2soL2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -278,9 +278,9 @@
           "height": 1000
         },
         "id": "4leC5KXozwB8",
-        "outputId": "ed174414-76cb-481d-90ea-7dc6c3896aba"
+        "outputId": "8dffc3d0-6c27-4bc2-ed8c-f261c17f8e56"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,24 +293,24 @@
               "3    Missing Data Imputation for Solar Yield Predic...   \n",
               "4    Use Case and Performance Analyses for Missing ...   \n",
               "..                                                 ...   \n",
-              "446  CSCW '17: Proceedings of the 2017 ACM Conferen...   \n",
-              "447  WebMedia '22: Proceedings of the Brazilian Sym...   \n",
-              "448  ASE '16: Proceedings of the 31st IEEE/ACM Inte...   \n",
-              "449  CHI EA '21: Extended Abstracts of the 2021 CHI...   \n",
-              "450  SBES '22: Proceedings of the XXXVI Brazilian S...   \n",
+              "446  MDE for Machine Learning-Enabled Software Syst...   \n",
+              "447  Probabilistic and Causal Inference: The Works ...   \n",
+              "448  An Overview of Noise-Robust Automatic Speech R...   \n",
+              "449  Risk Prediction on Electronic Health Records w...   \n",
+              "450  Variational Learning of Individual Survival Di...   \n",
               "\n",
-              "                                            Authors  Publication year  \\\n",
-              "0    Lobato FM,Tadaiesky VW,Araújo IM,de Santana ÁL              2015   \n",
-              "1        Kuppannagari SR,Fu Y,Chueng CM,Prasanna VK              2021   \n",
-              "2                          Wang Q,Ren S,Xia Y,Cao L              2021   \n",
-              "3                 Shen M,Zhang H,Cao Y,Yang F,Wen Y              2021   \n",
-              "4                                  Yang L,Chiang JA              2020   \n",
-              "..                                              ...               ...   \n",
-              "446                                             NaN              2017   \n",
-              "447                                             NaN              2022   \n",
-              "448                                             NaN              2016   \n",
-              "449                                             NaN              2021   \n",
-              "450                                             NaN              2022   \n",
+              "                                               Authors  Publication year  \\\n",
+              "0       Lobato FM,Tadaiesky VW,Araújo IM,de Santana ÁL              2015   \n",
+              "1           Kuppannagari SR,Fu Y,Chueng CM,Prasanna VK              2021   \n",
+              "2                             Wang Q,Ren S,Xia Y,Cao L              2021   \n",
+              "3                    Shen M,Zhang H,Cao Y,Yang F,Wen Y              2021   \n",
+              "4                                     Yang L,Chiang JA              2020   \n",
+              "..                                                 ...               ...   \n",
+              "446  Kirchhof JC,Kusmenko E,Ritz J,Rumpe B,Moin A,B...              2022   \n",
+              "447                                                NaN              2022   \n",
+              "448                   Li J,Deng L,Gong Y,Haeb-Umbach R              2014   \n",
+              "449              Ma F,Gao J,Suo Q,You Q,Zhou J,Zhang A              2018   \n",
+              "450                                Xiu Z,Tao C,Henao R              2020   \n",
               "\n",
               "                                              Abstract  \\\n",
               "0    Data analysis plays an important role in our I...   \n",
@@ -319,11 +319,11 @@
               "3    The accurate and robust prediction of short-te...   \n",
               "4    In big data analytics the phenomenon of missin...   \n",
               "..                                                 ...   \n",
-              "446  Welcome to CSCW 2017, the ACM 2017 Conference ...   \n",
-              "447                                                NaN   \n",
-              "448                                                NaN   \n",
-              "449                                                NaN   \n",
-              "450                                                NaN   \n",
+              "446  In this paper, we propose to adopt the MDE par...   \n",
+              "447  Professor Judea Pearl won the 2011 Turing Awar...   \n",
+              "448  New waves of consumer-centric applications, su...   \n",
+              "449  Predicting the risk of potential diseases from...   \n",
+              "450  The abundance of modern health data provides m...   \n",
               "\n",
               "                                                  URLs         Item type  \\\n",
               "0    https://doi.org/10.1145/2739482.2768451;http:/...  Conference Paper   \n",
@@ -332,11 +332,11 @@
               "3    https://doi.org/10.1145/3474085.3475430;http:/...  Conference Paper   \n",
               "4    https://doi.org/10.1145/3379247.3379270;http:/...  Conference Paper   \n",
               "..                                                 ...               ...   \n",
-              "446                                                NaN              Book   \n",
+              "446  https://doi.org/10.1145/3550356.3561576;http:/...  Conference Paper   \n",
               "447                                                NaN              Book   \n",
-              "448                                                NaN              Book   \n",
-              "449                                                NaN              Book   \n",
-              "450                                                NaN              Book   \n",
+              "448  https://doi.org/10.1109/TASLP.2014.2304637;htt...   Journal Article   \n",
+              "449  https://doi.org/10.1145/3219819.3220020;http:/...  Conference Paper   \n",
+              "450  https://doi.org/10.1145/3368555.3384454;http:/...  Conference Paper   \n",
               "\n",
               "    SEARCH_ENGINE  \n",
               "0             ACM  \n",
@@ -355,7 +355,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b3ff19aa-6d5a-4e14-a983-3ddd620d0187\">\n",
+              "  <div id=\"df-32791850-ae10-4cb3-b296-86a1d2af9afe\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -447,59 +447,59 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>446</th>\n",
-              "      <td>CSCW '17: Proceedings of the 2017 ACM Conferen...</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>2017</td>\n",
-              "      <td>Welcome to CSCW 2017, the ACM 2017 Conference ...</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Book</td>\n",
+              "      <td>MDE for Machine Learning-Enabled Software Syst...</td>\n",
+              "      <td>Kirchhof JC,Kusmenko E,Ritz J,Rumpe B,Moin A,B...</td>\n",
+              "      <td>2022</td>\n",
+              "      <td>In this paper, we propose to adopt the MDE par...</td>\n",
+              "      <td>https://doi.org/10.1145/3550356.3561576;http:/...</td>\n",
+              "      <td>Conference Paper</td>\n",
               "      <td>ACM</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>447</th>\n",
-              "      <td>WebMedia '22: Proceedings of the Brazilian Sym...</td>\n",
+              "      <td>Probabilistic and Causal Inference: The Works ...</td>\n",
               "      <td>NaN</td>\n",
               "      <td>2022</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>Professor Judea Pearl won the 2011 Turing Awar...</td>\n",
               "      <td>NaN</td>\n",
               "      <td>Book</td>\n",
               "      <td>ACM</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>448</th>\n",
-              "      <td>ASE '16: Proceedings of the 31st IEEE/ACM Inte...</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>2016</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Book</td>\n",
+              "      <td>An Overview of Noise-Robust Automatic Speech R...</td>\n",
+              "      <td>Li J,Deng L,Gong Y,Haeb-Umbach R</td>\n",
+              "      <td>2014</td>\n",
+              "      <td>New waves of consumer-centric applications, su...</td>\n",
+              "      <td>https://doi.org/10.1109/TASLP.2014.2304637;htt...</td>\n",
+              "      <td>Journal Article</td>\n",
               "      <td>ACM</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>449</th>\n",
-              "      <td>CHI EA '21: Extended Abstracts of the 2021 CHI...</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>2021</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Book</td>\n",
+              "      <td>Risk Prediction on Electronic Health Records w...</td>\n",
+              "      <td>Ma F,Gao J,Suo Q,You Q,Zhou J,Zhang A</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>Predicting the risk of potential diseases from...</td>\n",
+              "      <td>https://doi.org/10.1145/3219819.3220020;http:/...</td>\n",
+              "      <td>Conference Paper</td>\n",
               "      <td>ACM</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>450</th>\n",
-              "      <td>SBES '22: Proceedings of the XXXVI Brazilian S...</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>2022</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Book</td>\n",
+              "      <td>Variational Learning of Individual Survival Di...</td>\n",
+              "      <td>Xiu Z,Tao C,Henao R</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>The abundance of modern health data provides m...</td>\n",
+              "      <td>https://doi.org/10.1145/3368555.3384454;http:/...</td>\n",
+              "      <td>Conference Paper</td>\n",
               "      <td>ACM</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "<p>451 rows × 7 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3ff19aa-6d5a-4e14-a983-3ddd620d0187')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-32791850-ae10-4cb3-b296-86a1d2af9afe')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -550,12 +550,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b3ff19aa-6d5a-4e14-a983-3ddd620d0187 button.colab-df-convert');\n",
+              "          document.querySelector('#df-32791850-ae10-4cb3-b296-86a1d2af9afe button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b3ff19aa-6d5a-4e14-a983-3ddd620d0187');\n",
+              "          const element = document.querySelector('#df-32791850-ae10-4cb3-b296-86a1d2af9afe');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -578,20 +578,29 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "new_df.to_csv(\"ACM_Completo_Normalizado.csv\", encoding = 'utf-8')"
+        "df_final.to_csv(\"ACM_Completo_Normalizado.csv\", encoding = 'utf-8')"
       ],
       "metadata": {
         "id": "-49wqJwk-fG3"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#AGORA VAMOS FAZER DO IEE"
+      ],
+      "metadata": {
+        "id": "ZVXb_2WOW5de"
+      }
     }
   ]
 }
